Update mg-product
